WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277770
REGRESSION(
281227@main
): Causes extra IPC to the UI process in some cases (<
rdar://133167925
>)
https://bugs.webkit.org/show_bug.cgi?id=277770
Summary
REGRESSION(281227@main): Causes extra IPC to the UI process in some cases (<r...
WebKit Commit Bot
Reported
2024-08-07 13:54:42 PDT
https://commits.webkit.org/281227@main
introduced a regression: Causes extra IPC to the UI process in some cases (<
rdar://133167925
>) This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 281227@main
(24.72 KB, patch)
2024-08-07 13:54 PDT
,
WebKit Commit Bot
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2024-08-07 13:54:49 PDT
Created
attachment 472074
[details]
REVERT of
281227@main
Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2
2024-08-07 13:58:38 PDT
Committed
281957@main
(2ae05609532b): <
https://commits.webkit.org/281957@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472074
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-08-07 13:59:15 PDT
<
rdar://problem/133410922
>
EWS
Comment 4
2024-08-08 08:56:27 PDT
Committed
280938.209@safari-7619-branch
(f20946ede381): <
https://commits.webkit.org/280938.209@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1573 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug