Cherry-pick 2ae05609532b. rdar://133167925

Unreviewed, reverting 281227@main.
    https://bugs.webkit.org/show_bug.cgi?id=277770

    Causes extra IPC to the UI process in some cases (<rdar://133167925>)

    Reverted changeset:

    "Speedometer 3: getBoundingClientRect spends time updating layer positions that it doesn't use."
    https://bugs.webkit.org/show_bug.cgi?id=276393
    https://commits.webkit.org/281227@main

    Canonical link: https://commits.webkit.org/281957@main

Canonical link: https://commits.webkit.org/280938.209@safari-7619.1.26.30-branch