Source/WebCore/html/shadow/MediaControlTextTrackContainerElement.cpp
@@ -48,7 +48,6 @@
 #include "Page.h"
 #include "PageGroup.h"
 #include "RenderLayer.h"
-#include "RenderLayerInlines.h"
 #include "RenderVideo.h"
 #include "RenderView.h"
 #include "Settings.h"
